test/files/neg/t8322.check
t8322.scala:17: error: ambiguous implicit values:
 both method $conforms in object Predef of type [A]=> A => A
 and value ew in trait F of type => Writes[Any]
 match expected type T
  implicit def wr[E] = jw(implicitly, implicitly)
                          ^
t8322.scala:17: error: diverging implicit expansion for type W[Any]
starting with method jw in trait F
  implicit def wr[E] = jw(implicitly, implicitly)
                                      ^
t8322.scala:19: error: type mismatch;
 found   : String
 required: scala.util.Either[?,?]
  Right(0).right.flatMap(_ => new String())
                              ^
3 errors
